fixed accessibility issue with the apply button in dark mode

--- a/javascript-job-search-mvp/css/styles.css
+++ b/javascript-job-search-mvp/css/styles.css
@@ -573,7 +573,8 @@ footer .dropdown-menu>li>a:hover>span {
 }
 
 .apply.dark-apply:hover {
-	background-color: var(--dark-red);
+	background-color: white;
+	color: black;
 }
 
 /* Dark Header */
